<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainCourseWindow">
    <Button
            android:text="@string/signoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintVertical_bias="0.08" android:onClick="signOut"/>
    <ListView
            android:layout_width="411dp"
            android:layout_height="316dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/courseList"
            app:layout_constraintVertical_bias="0.355">
    </ListView>
    <Button
            android:text="@string/userButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            android:onClick="openUserActivity"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.926" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.081" tools:ignore="OnClick"/>
    <ListView
            android:layout_width="407dp"
            android:layout_height="214dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.992" android:id="@+id/folderList"/>
    <TextView
            android:text="@string/folders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/folderList" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.005" app:layout_constraintVertical_bias="0.697"/>
</androidx.constraintlayout.widget.ConstraintLayout>